# seat

./: .gitignore  .pkg  CMakeLists.txt
cmake/: pkg.cmake
exe/: main.cc  server.cc
glucose-4.2.1/: CMakeLists.txt
include/seat/: annealing.h  booking.h  coloring_ilp.h  direct_seat_assignment.h  flow_graph.h  heuristic.h  heuristic_state.h  interval.h  interval_graph.h  mcf_solver_i.h  neighbourhood.h  nogo_cache.h  output_options.h  properties.h  pseudo_gsd_chooser.h  random_booking.h  reservation.h  scip.h  seat_assignment.h  seat_assignment2.h  seat_from_wagon_assignment.h  simulate_booking_series.h  simulated_annealing.h  simulation_specifics.h  solver.h  train.h  types.h  verify_booking_assignment.h  wagon_solver.h  wish.h
src/: booking.cc  direct_seat_assignment.cc  flow_graph.cc  heuristic.cc  heuristic_state.cc  interval.cc  interval_graph.cc  main.cc  nogo_cache.cc  pseudo_gsd_chooser.cc  random_booking.cc  reservation.cc  seat_assignment.cc  seat_assignment2.cc  seat_from_wagon_assignment.cc  simulate_booking_series.cc  simulated_annealing.cc  solver.cc  train.cc  types.cc  verify_booking_assignment.cc  wagon_solver.cc  wish.cc
test/: gsd_test.cc  heuristic_test.cc  main.cc  nogo_cache_test.cc
